--- a/Config/Json/c/AchievementConfigCategory.json
+++ b/Config/Json/c/AchievementConfigCategory.json
@@ -3,143 +3,312 @@
     "Id": 10001,
     "Name": "成就10001",
     "Desc": "获得10000金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 1
     },
-    "Icon": "achievementicon_10001"
+    "Icon": "achievementicon_10001",
+    "Property": 1001
   },
   {
     "Id": 10002,
     "Name": "成就10002",
     "Desc": "获得10001金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 2
     },
-    "Icon": "achievementicon_10002"
+    "Icon": "achievementicon_10002",
+    "Property": 1002
   },
   {
     "Id": 10003,
     "Name": "成就10003",
     "Desc": "获得10002金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 3
     },
-    "Icon": "achievementicon_10003"
+    "Icon": "achievementicon_10003",
+    "Property": 1001
   },
   {
     "Id": 10004,
     "Name": "成就10004",
     "Desc": "获得10003金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 4
     },
-    "Icon": "achievementicon_10004"
+    "Icon": "achievementicon_10004",
+    "Property": 1002
   },
   {
     "Id": 10005,
     "Name": "成就10005",
     "Desc": "获得10004金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 5
     },
-    "Icon": "achievementicon_10005"
+    "Icon": "achievementicon_10005",
+    "Property": 1001
   },
   {
     "Id": 10006,
     "Name": "成就10006",
     "Desc": "获得10005金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 6
     },
-    "Icon": "achievementicon_10006"
+    "Icon": "achievementicon_10006",
+    "Property": 1002
   },
   {
     "Id": 10007,
     "Name": "成就10007",
     "Desc": "获得10006金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 7
     },
-    "Icon": "achievementicon_10007"
+    "Icon": "achievementicon_10007",
+    "Property": 1001
   },
   {
     "Id": 10008,
     "Name": "成就10008",
     "Desc": "获得10007金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 8
     },
-    "Icon": "achievementicon_10008"
+    "Icon": "achievementicon_10008",
+    "Property": 1002
   },
   {
     "Id": 10009,
     "Name": "成就10009",
     "Desc": "获得10008金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 9
     },
-    "Icon": "achievementicon_10009"
+    "Icon": "achievementicon_10009",
+    "Property": 1001
   },
   {
     "Id": 10010,
     "Name": "成就10010",
     "Desc": "获得10009金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 10
     },
-    "Icon": "achievementicon_10010"
+    "Icon": "achievementicon_10010",
+    "Property": 1002
   },
   {
     "Id": 10011,
     "Name": "成就10011",
     "Desc": "获得10010金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 11
     },
-    "Icon": "achievementicon_10011"
+    "Icon": "achievementicon_10011",
+    "Property": 1001
   },
   {
     "Id": 10012,
     "Name": "成就10012",
     "Desc": "获得10011金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 12
     },
-    "Icon": "achievementicon_10012"
+    "Icon": "achievementicon_10012",
+    "Property": 1002
   },
   {
     "Id": 10013,
     "Name": "成就10013",
     "Desc": "获得10012金币",
+    "AchievementType": 1,
     "Condition": {
       "$type": "PropertyCompare",
       "Property": 1001,
       "Value": 13
     },
-    "Icon": "achievementicon_10013"
+    "Icon": "achievementicon_10013",
+    "Property": 1001
+  },
+  {
+    "Id": 10014,
+    "Name": "成就10014",
+    "Desc": "获得10013金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 10000
+    },
+    "Icon": "achievementicon_10014",
+    "Property": 1002
+  },
+  {
+    "Id": 10015,
+    "Name": "成就10015",
+    "Desc": "获得10014金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 50000
+    },
+    "Icon": "achievementicon_10015",
+    "Property": 1001
+  },
+  {
+    "Id": 10016,
+    "Name": "成就10016",
+    "Desc": "获得10015金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 100000
+    },
+    "Icon": "achievementicon_10016",
+    "Property": 1002
+  },
+  {
+    "Id": 10017,
+    "Name": "成就10017",
+    "Desc": "获得10016金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 150000
+    },
+    "Icon": "achievementicon_10017",
+    "Property": 1001
+  },
+  {
+    "Id": 10018,
+    "Name": "成就10018",
+    "Desc": "获得10017金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 200000
+    },
+    "Icon": "achievementicon_10018",
+    "Property": 1002
+  },
+  {
+    "Id": 10019,
+    "Name": "成就10019",
+    "Desc": "获得10018金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 250000
+    },
+    "Icon": "achievementicon_10019",
+    "Property": 1001
+  },
+  {
+    "Id": 10020,
+    "Name": "成就10020",
+    "Desc": "获得10019金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 300000
+    },
+    "Icon": "achievementicon_10020",
+    "Property": 1002
+  },
+  {
+    "Id": 10021,
+    "Name": "成就10021",
+    "Desc": "获得10020金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 350000
+    },
+    "Icon": "achievementicon_10021",
+    "Property": 1001
+  },
+  {
+    "Id": 10022,
+    "Name": "成就10022",
+    "Desc": "获得10021金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 400000
+    },
+    "Icon": "achievementicon_10022",
+    "Property": 1002
+  },
+  {
+    "Id": 10023,
+    "Name": "成就10023",
+    "Desc": "获得10022金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 450000
+    },
+    "Icon": "achievementicon_10023",
+    "Property": 1001
+  },
+  {
+    "Id": 10024,
+    "Name": "成就10024",
+    "Desc": "获得10023金币",
+    "AchievementType": 2,
+    "Condition": {
+      "$type": "CurrencyCompare",
+      "CurrencyType": 1,
+      "Value": 500000
+    },
+    "Icon": "achievementicon_10024",
+    "Property": 1002
   }
 ]
