--- a/Config/Json/c/SceneConfigCategory.json
+++ b/Config/Json/c/SceneConfigCategory.json
@@ -1,42 +1,42 @@
 [
   {
     "Id": 50001,
-    "SceneRes": 150001
+    "SceneRes": "150001"
   },
   {
     "Id": 50002,
-    "SceneRes": 150002
+    "SceneRes": "150002"
   },
   {
     "Id": 50003,
-    "SceneRes": 150003
+    "SceneRes": "150003"
   },
   {
     "Id": 50004,
-    "SceneRes": 150004
+    "SceneRes": "150004"
   },
   {
     "Id": 50005,
-    "SceneRes": 150005
+    "SceneRes": "150005"
   },
   {
     "Id": 50006,
-    "SceneRes": 150006
+    "SceneRes": "150006"
   },
   {
     "Id": 50007,
-    "SceneRes": 150007
+    "SceneRes": "150007"
   },
   {
     "Id": 50008,
-    "SceneRes": 150008
+    "SceneRes": "150008"
   },
   {
     "Id": 50009,
-    "SceneRes": 150009
+    "SceneRes": "150009"
   },
   {
     "Id": 50010,
-    "SceneRes": 150010
+    "SceneRes": "150010"
   }
 ]
