--- a/Config/Json/c/MountConfigCategory.json
+++ b/Config/Json/c/MountConfigCategory.json
@@ -4,69 +4,79 @@
     "Name": "坐骑01",
     "Desc": "坐骑描述01",
     "Model": "910001",
-    "ActivationItem": 920001
+    "ActivationItem": 920001,
+    "SpeedRate": 10000
   },
   {
     "Id": 900002,
     "Name": "坐骑02",
     "Desc": "坐骑描述02",
     "Model": "910002",
-    "ActivationItem": 920002
+    "ActivationItem": 920002,
+    "SpeedRate": 10000
   },
   {
     "Id": 900003,
     "Name": "坐骑03",
     "Desc": "坐骑描述03",
     "Model": "910003",
-    "ActivationItem": 920003
+    "ActivationItem": 920003,
+    "SpeedRate": 10000
   },
   {
     "Id": 900004,
     "Name": "坐骑04",
     "Desc": "坐骑描述04",
     "Model": "910004",
-    "ActivationItem": 920004
+    "ActivationItem": 920004,
+    "SpeedRate": 10000
   },
   {
     "Id": 900005,
     "Name": "坐骑05",
     "Desc": "坐骑描述05",
     "Model": "910005",
-    "ActivationItem": 920005
+    "ActivationItem": 920005,
+    "SpeedRate": 10000
   },
   {
     "Id": 900006,
     "Name": "坐骑06",
     "Desc": "坐骑描述06",
     "Model": "910006",
-    "ActivationItem": 920006
+    "ActivationItem": 920006,
+    "SpeedRate": 10000
   },
   {
     "Id": 900007,
     "Name": "坐骑07",
     "Desc": "坐骑描述07",
     "Model": "910007",
-    "ActivationItem": 920007
+    "ActivationItem": 920007,
+    "SpeedRate": 15000
   },
   {
     "Id": 900008,
     "Name": "坐骑08",
     "Desc": "坐骑描述08",
     "Model": "910008",
-    "ActivationItem": 920008
+    "ActivationItem": 920008,
+    "SpeedRate": 15000
   },
   {
     "Id": 900009,
     "Name": "坐骑09",
     "Desc": "坐骑描述09",
     "Model": "910009",
-    "ActivationItem": 920009
+    "ActivationItem": 920009,
+    "SpeedRate": 28000
   },
   {
     "Id": 900010,
     "Name": "坐骑10",
     "Desc": "坐骑描述10",
     "Model": "910010",
-    "ActivationItem": 920010
+    "ActivationItem": 920010,
+    "SpeedRate": 28000
   }
 ]
