--- a/Config/Json/c/SkillConfigCategory.json
+++ b/Config/Json/c/SkillConfigCategory.json
@@ -1,162 +1,242 @@
 [
   {
-    "Id": 11001,
+    "Id": 111001,
     "Level": 1,
+    "SkillName": "技能111001",
+    "SkillDesc": "技能描述111001",
     "Base": 1100,
     "Ratio": 5,
     "SkillRange": 1,
-    "Consume": 10
+    "Consume": 10,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 1000
   },
   {
-    "Id": 11001,
+    "Id": 111002,
     "Level": 2,
+    "SkillName": "技能111002",
+    "SkillDesc": "技能描述111002",
     "Base": 1200,
     "Ratio": 10,
     "SkillRange": 1,
-    "Consume": 11
+    "Consume": 11,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 2000
   },
   {
-    "Id": 11001,
+    "Id": 111003,
     "Level": 3,
+    "SkillName": "技能111003",
+    "SkillDesc": "技能描述111003",
     "Base": 1300,
     "Ratio": 15,
     "SkillRange": 1,
-    "Consume": 12
+    "Consume": 12,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 3000
   },
   {
-    "Id": 11001,
+    "Id": 111004,
     "Level": 4,
+    "SkillName": "技能111004",
+    "SkillDesc": "技能描述111004",
     "Base": 1400,
     "Ratio": 20,
     "SkillRange": 1,
-    "Consume": 13
+    "Consume": 13,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 4000
   },
   {
-    "Id": 11001,
+    "Id": 111005,
     "Level": 5,
+    "SkillName": "技能111005",
+    "SkillDesc": "技能描述111005",
     "Base": 1500,
     "Ratio": 25,
     "SkillRange": 1,
-    "Consume": 14
+    "Consume": 14,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 5000
   },
   {
-    "Id": 11001,
+    "Id": 111006,
     "Level": 6,
+    "SkillName": "技能111006",
+    "SkillDesc": "技能描述111006",
     "Base": 1600,
     "Ratio": 30,
     "SkillRange": 1,
-    "Consume": 15
+    "Consume": 15,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 6000
   },
   {
-    "Id": 11001,
+    "Id": 111007,
     "Level": 7,
+    "SkillName": "技能111007",
+    "SkillDesc": "技能描述111007",
     "Base": 1700,
     "Ratio": 35,
     "SkillRange": 1,
-    "Consume": 16
+    "Consume": 16,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 7000
   },
   {
-    "Id": 11001,
+    "Id": 111008,
     "Level": 8,
+    "SkillName": "技能111008",
+    "SkillDesc": "技能描述111008",
     "Base": 1800,
     "Ratio": 40,
     "SkillRange": 1,
-    "Consume": 17
+    "Consume": 17,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 8000
   },
   {
-    "Id": 11001,
+    "Id": 111009,
     "Level": 9,
+    "SkillName": "技能111009",
+    "SkillDesc": "技能描述111009",
     "Base": 1900,
     "Ratio": 45,
     "SkillRange": 1,
-    "Consume": 18
+    "Consume": 18,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 9000
   },
   {
-    "Id": 11001,
+    "Id": 111010,
     "Level": 10,
+    "SkillName": "技能111010",
+    "SkillDesc": "技能描述111010",
     "Base": 2000,
     "Ratio": 50,
     "SkillRange": 1,
-    "Consume": 19
+    "Consume": 19,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 10000
   },
   {
-    "Id": 11002,
+    "Id": 112001,
     "Level": 1,
+    "SkillName": "技能112001",
+    "SkillDesc": "技能描述112001",
     "Base": 1650,
     "Ratio": 5,
     "SkillRange": 2,
-    "Consume": 10
+    "Consume": 10,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 1000
   },
   {
-    "Id": 11002,
+    "Id": 112002,
     "Level": 2,
+    "SkillName": "技能112002",
+    "SkillDesc": "技能描述112002",
     "Base": 1800,
     "Ratio": 10,
     "SkillRange": 2,
-    "Consume": 11
+    "Consume": 11,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 2000
   },
   {
-    "Id": 11002,
+    "Id": 112003,
     "Level": 3,
+    "SkillName": "技能112003",
+    "SkillDesc": "技能描述112003",
     "Base": 1950,
     "Ratio": 15,
     "SkillRange": 2,
-    "Consume": 12
+    "Consume": 12,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 3000
   },
   {
-    "Id": 11002,
+    "Id": 112004,
     "Level": 4,
+    "SkillName": "技能112004",
+    "SkillDesc": "技能描述112004",
     "Base": 2100,
     "Ratio": 20,
     "SkillRange": 2,
-    "Consume": 13
+    "Consume": 13,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 4000
   },
   {
-    "Id": 11002,
+    "Id": 112005,
     "Level": 5,
+    "SkillName": "技能112005",
+    "SkillDesc": "技能描述112005",
     "Base": 2250,
     "Ratio": 25,
     "SkillRange": 2,
-    "Consume": 14
+    "Consume": 14,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 5000
   },
   {
-    "Id": 11002,
+    "Id": 112006,
     "Level": 6,
+    "SkillName": "技能112006",
+    "SkillDesc": "技能描述112006",
     "Base": 2400,
     "Ratio": 30,
     "SkillRange": 2,
-    "Consume": 15
+    "Consume": 15,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 6000
   },
   {
-    "Id": 11002,
+    "Id": 112007,
     "Level": 7,
+    "SkillName": "技能112007",
+    "SkillDesc": "技能描述112007",
     "Base": 2550,
     "Ratio": 35,
     "SkillRange": 2,
-    "Consume": 16
+    "Consume": 16,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 7000
   },
   {
-    "Id": 11002,
+    "Id": 112008,
     "Level": 8,
+    "SkillName": "技能112008",
+    "SkillDesc": "技能描述112008",
     "Base": 2700,
     "Ratio": 40,
     "SkillRange": 2,
-    "Consume": 17
+    "Consume": 17,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 8000
   },
   {
-    "Id": 11002,
+    "Id": 112009,
     "Level": 9,
+    "SkillName": "技能112009",
+    "SkillDesc": "技能描述112009",
     "Base": 2850,
     "Ratio": 45,
     "SkillRange": 2,
-    "Consume": 18
+    "Consume": 18,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 9000
   },
   {
-    "Id": 11002,
+    "Id": 112010,
     "Level": 10,
+    "SkillName": "技能112010",
+    "SkillDesc": "技能描述112010",
     "Base": 3000,
     "Ratio": 50,
     "SkillRange": 2,
-    "Consume": 19
+    "Consume": 19,
+    "LearnCurrencyType": 1,
+    "LearnCurrencyValue": 10000
   }
 ]
