--- a/Config/Json/s/ChargeConfigCategory.json
+++ b/Config/Json/s/ChargeConfigCategory.json
@@ -1,42 +1,102 @@
 [
   {
-    "Id": 770001,
-    "Price": 1
+    "Id": "770001",
+    "Price": 1,
+    "Pack": 930001
   },
   {
-    "Id": 770002,
-    "Price": 6
+    "Id": "770002",
+    "Price": 6,
+    "Pack": 930001
   },
   {
-    "Id": 770003,
-    "Price": 12
+    "Id": "770003",
+    "Price": 12,
+    "Pack": 930001
   },
   {
-    "Id": 770004,
-    "Price": 18
+    "Id": "770004",
+    "Price": 18,
+    "Pack": 930001
   },
   {
-    "Id": 770005,
-    "Price": 30
+    "Id": "770005",
+    "Price": 30,
+    "Pack": 930001
   },
   {
-    "Id": 770006,
-    "Price": 68
+    "Id": "770006",
+    "Price": 68,
+    "Pack": 930001
   },
   {
-    "Id": 770007,
-    "Price": 98
+    "Id": "770007",
+    "Price": 98,
+    "Pack": 930001
   },
   {
-    "Id": 770008,
-    "Price": 128
+    "Id": "770008",
+    "Price": 128,
+    "Pack": 930001
   },
   {
-    "Id": 770009,
-    "Price": 328
+    "Id": "770009",
+    "Price": 328,
+    "Pack": 930001
   },
   {
-    "Id": 770010,
-    "Price": 648
+    "Id": "770010",
+    "Price": 648,
+    "Pack": 930001
+  },
+  {
+    "Id": "770011",
+    "Price": 1,
+    "Pack": 930001
+  },
+  {
+    "Id": "770012",
+    "Price": 6,
+    "Pack": 930001
+  },
+  {
+    "Id": "770013",
+    "Price": 12,
+    "Pack": 930001
+  },
+  {
+    "Id": "770014",
+    "Price": 18,
+    "Pack": 930001
+  },
+  {
+    "Id": "770015",
+    "Price": 30,
+    "Pack": 930001
+  },
+  {
+    "Id": "770016",
+    "Price": 68,
+    "Pack": 930001
+  },
+  {
+    "Id": "770017",
+    "Price": 98,
+    "Pack": 930001
+  },
+  {
+    "Id": "770018",
+    "Price": 128,
+    "Pack": 930001
+  },
+  {
+    "Id": "770019",
+    "Price": 328,
+    "Pack": 930001
+  },
+  {
+    "Id": "770020",
+    "Price": 648,
+    "Pack": 930001
   }
 ]
