--- a/Config/Json/c/ItemConfigCategory.json
+++ b/Config/Json/c/ItemConfigCategory.json
@@ -367,6 +367,276 @@
     "Icon": "itemicon_60024"
   },
   {
+    "Id": 60025,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60025"
+  },
+  {
+    "Id": 60026,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60026"
+  },
+  {
+    "Id": 60027,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60027"
+  },
+  {
+    "Id": 60028,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60028"
+  },
+  {
+    "Id": 60029,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60029"
+  },
+  {
+    "Id": 60030,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60030"
+  },
+  {
+    "Id": 60031,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60031"
+  },
+  {
+    "Id": 60032,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60032"
+  },
+  {
+    "Id": 60033,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60033"
+  },
+  {
+    "Id": 60034,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60034"
+  },
+  {
+    "Id": 60035,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60035"
+  },
+  {
+    "Id": 60036,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60036"
+  },
+  {
+    "Id": 60037,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60037"
+  },
+  {
+    "Id": 60038,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60038"
+  },
+  {
+    "Id": 60039,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60039"
+  },
+  {
+    "Id": 60040,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60040"
+  },
+  {
+    "Id": 60041,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60041"
+  },
+  {
+    "Id": 60042,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60042"
+  },
+  {
+    "Id": 60043,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60043"
+  },
+  {
+    "Id": 60044,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60044"
+  },
+  {
+    "Id": 60045,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60045"
+  },
+  {
+    "Id": 60046,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60046"
+  },
+  {
+    "Id": 60047,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60047"
+  },
+  {
+    "Id": 60048,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60048"
+  },
+  {
+    "Id": 60049,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60049"
+  },
+  {
+    "Id": 60050,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60050"
+  },
+  {
+    "Id": 60051,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60051"
+  },
+  {
+    "Id": 60052,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60052"
+  },
+  {
+    "Id": 60053,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60053"
+  },
+  {
+    "Id": 60054,
+    "Name": "裂皮鞋子",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60054"
+  },
+  {
     "Id": 610001,
     "Name": "红色宝石01",
     "Type": 7,
