--- a/Config/Json/cs/ItemConfigCategory.json
+++ b/Config/Json/cs/ItemConfigCategory.json
@@ -411,6 +411,306 @@
     "Icon": "itemicon_60024"
   },
   {
+    "Id": 60025,
+    "Name": "itemname_60025",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60025"
+  },
+  {
+    "Id": 60026,
+    "Name": "itemname_60026",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60026"
+  },
+  {
+    "Id": 60027,
+    "Name": "itemname_60027",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60027"
+  },
+  {
+    "Id": 60028,
+    "Name": "itemname_60028",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60028"
+  },
+  {
+    "Id": 60029,
+    "Name": "itemname_60029",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60029"
+  },
+  {
+    "Id": 60030,
+    "Name": "itemname_60030",
+    "Type": 3,
+    "Quality": 2,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60030"
+  },
+  {
+    "Id": 60031,
+    "Name": "itemname_60031",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60031"
+  },
+  {
+    "Id": 60032,
+    "Name": "itemname_60032",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60032"
+  },
+  {
+    "Id": 60033,
+    "Name": "itemname_60033",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60033"
+  },
+  {
+    "Id": 60034,
+    "Name": "itemname_60034",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60034"
+  },
+  {
+    "Id": 60035,
+    "Name": "itemname_60035",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60035"
+  },
+  {
+    "Id": 60036,
+    "Name": "itemname_60036",
+    "Type": 3,
+    "Quality": 3,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60036"
+  },
+  {
+    "Id": 60037,
+    "Name": "itemname_60037",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60037"
+  },
+  {
+    "Id": 60038,
+    "Name": "itemname_60038",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60038"
+  },
+  {
+    "Id": 60039,
+    "Name": "itemname_60039",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60039"
+  },
+  {
+    "Id": 60040,
+    "Name": "itemname_60040",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60040"
+  },
+  {
+    "Id": 60041,
+    "Name": "itemname_60041",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60041"
+  },
+  {
+    "Id": 60042,
+    "Name": "itemname_60042",
+    "Type": 3,
+    "Quality": 4,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60042"
+  },
+  {
+    "Id": 60043,
+    "Name": "itemname_60043",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60043"
+  },
+  {
+    "Id": 60044,
+    "Name": "itemname_60044",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60044"
+  },
+  {
+    "Id": 60045,
+    "Name": "itemname_60045",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60045"
+  },
+  {
+    "Id": 60046,
+    "Name": "itemname_60046",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60046"
+  },
+  {
+    "Id": 60047,
+    "Name": "itemname_60047",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60047"
+  },
+  {
+    "Id": 60048,
+    "Name": "itemname_60048",
+    "Type": 3,
+    "Quality": 5,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60048"
+  },
+  {
+    "Id": 60049,
+    "Name": "itemname_60049",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 1,
+    "Icon": "itemicon_60049"
+  },
+  {
+    "Id": 60050,
+    "Name": "itemname_60050",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 2,
+    "Icon": "itemicon_60050"
+  },
+  {
+    "Id": 60051,
+    "Name": "itemname_60051",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 3,
+    "Icon": "itemicon_60051"
+  },
+  {
+    "Id": 60052,
+    "Name": "itemname_60052",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 4,
+    "Icon": "itemicon_60052"
+  },
+  {
+    "Id": 60053,
+    "Name": "itemname_60053",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 5,
+    "Icon": "itemicon_60053"
+  },
+  {
+    "Id": 60054,
+    "Name": "itemname_60054",
+    "Type": 3,
+    "Quality": 6,
+    "UseLevel": 1,
+    "MaxCount": 1,
+    "EquipmentType": 6,
+    "Icon": "itemicon_60054"
+  },
+  {
     "Id": 610001,
     "Name": "itemname_610001",
     "Type": 7,
